# code-maestro

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  build.spec  pyproject.toml  set-python-path.sh  start.sh
app/: main.py  run_dev.py  utils.py
app/tabs/: chat_tab.py  setting_tab.py
